[package]
name = "wasm-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cap-std = "2.0.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
wasi-common = "15.0.1"
wasmtime = "15.0.1"
wasmtime-wasi = "15.0.1"
